--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="header__top container">
             <div class="header__top-logo">
-                <img src="logo.png" alt="Logo" class="header__logo-img">
+                <img src="images/logo.png" alt="Logo" class="header__logo-img">
                 <span class="header__logo-text">ESRA</span>
             </div>
             <nav>
@@ -107,10 +107,10 @@
     </header>
 
     <section class="home">
-        <video class="video-slide active" src="video1.mp4" autoplay muted loop></video>
-        <video class="video-slide" src="video2.mp4" autoplay muted loop></video>
-        <video class="video-slide" src="video3.mp4" autoplay muted loop></video>
-        <video class="video-slide" src="video4.mp4" autoplay muted loop></video>
+        <video class="video-slide active" src="images/video1.mp4" autoplay muted loop></video>
+        <video class="video-slide" src="images/video2.mp4" autoplay muted loop></video>
+        <video class="video-slide" src="images/video3.mp4" autoplay muted loop></video>
+        <video class="video-slide" src="images/video4.mp4" autoplay muted loop></video>
         <div class="container">
             <div class="content active">
                 <h1>Steels Value Journey <br><span>STEEL</span></h1>
@@ -171,7 +171,7 @@
                     <a href="#">About Company<i class="ri-arrow-right-line"></i></a>
                 </div>
                 <div class="company-image">
-                    <img src="worker.jpg" alt="">
+                    <img src="images/worker.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -184,7 +184,7 @@
                     <h3 class="card-title">Automotive</h3>
                     <a href="#" class="card-link">See all<i class="ri-arrow-right-line"></i></a>
                     <video class="video-background" loop muted>
-                        <source src="video1.mp4" type="video/mp4">
+                        <source src="images/video1.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="video-card" onmouseover="handleVideo(this, 'hover')"
@@ -193,7 +193,7 @@
                     <h3 class="card-title">Hydraulic Systems</h3>
                     <a href="#" class="card-link">Discover<i class="ri-arrow-right-line"></i></a>
                     <video class="video-background" loop muted>
-                        <source src="video2.mp4" type="video/mp4">
+                        <source src="images/video2.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="video-card" onmouseover="handleVideo(this, 'hover')"
@@ -202,7 +202,7 @@
                     <h3 class="card-title">Energy</h3>
                     <a href="#" class="card-link">Discover<i class="ri-arrow-right-line"></i></a>
                     <video class="video-background" loop muted>
-                        <source src="video3.mp4" type="video/mp4">
+                        <source src="images/video3.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="video-card" onmouseover="handleVideo(this, 'hover')"
@@ -211,7 +211,7 @@
                     <h3 class="card-title">Agriculture</h3>
                     <a href="#" class="card-link">Discover<i class="ri-arrow-right-line"></i></a>
                     <video class="video-background" loop muted>
-                        <source src="video4.mp4" type="video/mp4">
+                        <source src="images/video4.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
@@ -229,27 +229,27 @@
                 <div class="products__images">
                     <div class="products-column">
                         <div class="products-image">
-                            <img src="image1.jpg" alt="Image 1">
+                            <img src="images/image1.jpg" alt="Image 1">
                             <h1>denemeee</h1>
                         </div>
                     </div>
                     <div class="products-column">
                         <div class="products-image">
-                            <img src="image2.jpg" alt="Image 2">
+                            <img src="images/image2.jpg" alt="Image 2">
                             <h1>denemeee</h1>
                         </div>
                         <div class="products-image">
-                            <img src="image3.jpg" alt="Image 3">
+                            <img src="images/image3.jpg" alt="Image 3">
                             <h1>denemeee</h1>
                         </div>
                     </div>
                     <div class="products-column">
                         <div class="products-image">
-                            <img src="image4.jpg" alt="Image 4">
+                            <img src="images/image4.jpg" alt="Image 4">
                             <h1>denemeee</h1>
                         </div>
                         <div class="products-image">
-                            <img src="image5.jpg" alt="Image 5">
+                            <img src="images/image5.jpg" alt="Image 5">
                             <h1>denemeee</h1>
                         </div>
                     </div>
@@ -274,7 +274,7 @@
                         <a href="#">Discover<i class="ri-arrow-right-line"></i></a>
                     </div>
                     <div class="success-card">
-                        <img src="image1.jpg" alt="">
+                        <img src="images/image1.jpg" alt="">
                         <h5><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Reprehenderit, unde?</h5><br>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam at dicta atque ducimus maiores facilis? Eos nemo est eaque, at facilis asperiores nostrum ut, hic repudiandae voluptatem reprehenderit id neque!</p>
                     </div>
