career kısmına gelindi

--- a/index.html
+++ b/index.html
@@ -275,8 +275,11 @@
                     </div>
                     <div class="success-card">
                         <img src="images/image1.jpg" alt="">
-                        <h5><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Reprehenderit, unde?</h5><br>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam at dicta atque ducimus maiores facilis? Eos nemo est eaque, at facilis asperiores nostrum ut, hic repudiandae voluptatem reprehenderit id neque!</p>
+                        <h5><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Reprehenderit, unde?</h5>
+                        <br>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam at dicta atque ducimus
+                            maiores facilis? Eos nemo est eaque, at facilis asperiores nostrum ut, hic repudiandae
+                            voluptatem reprehenderit id neque!</p>
                     </div>
                 </div>
             </div>
@@ -284,13 +287,40 @@
                 <div class="container">
                     <div class="future-content">
                         <h3>Building the <b>Future</b><br></h3><br>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus obcaecati maiores necessitatibus fuga eligendi accusantium consequuntur libero, unde quasi? Repellendus culpa eos explicabo quia, fugiat porro! Ipsam suscipit quo, quod earum consequuntur!</p><br>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus obcaecati maiores
+                            necessitatibus fuga eligendi accusantium consequuntur libero, unde quasi? Repellendus culpa
+                            eos explicabo quia, fugiat porro! Ipsam suscipit quo, quod earum consequuntur!</p><br>
                         <a href="#" class="card-link">See all<i class="ri-arrow-right-line"></i></a>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="sustainability">
+            <div class="title1 big-title">WE'RE IN</div>
+            <div class="title2 big-title">BUSINESS</div>
+            <div class="title1 big-title">TO HEAL</div>
+            <div class="d-flex flex-row">
+                <div class="title2 big-title">OUR</div>
+                <p class="text-white" style="width: 35%; margin: auto;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptatem ex est, qui dolores, animi
+                    officia accusantium explicabo reiciendis quos neque. Fugiat eos ipsum architecto non odio veniam,
+                    velit neque mollitia dolorum adipisci suscipit quasi beatae rem eum enim vitae repudiandae deserunt
+                    alias repellendus earum expedita? Commodi nostrum magni neque.</p>
+            </div>
+            <div class="title1 big-title">PLANET</div>
+        </div>
+        <div class="career">
+            <div class="container">
+                <div class="title">
+                    <h1 class="big-title">YOUNG</h1>
+                    <h2 class="small-title">Talent</h2>
+                </div>
+                <div class="career-image">
+                    <h3>Driving positive social change starts with our people</h3>
                 </div>
             </div>
         </div>
     </section>
     <script src="script.js"></script>
 </body>
+
 </html>
