--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
 <body>
@@ -182,7 +189,7 @@
                     onmouseout="handleVideo(this, 'unhover')">
                     <span class="card-no">01</span>
                     <h3 class="card-title">Automotive</h3>
-                    <a href="#" class="card-link">See all<i class="ri-arrow-right-line"></i></a>
+                    <a href="#" class="card-link">Discover<i class="ri-arrow-right-line"></i></a>
                     <video class="video-background" loop muted>
                         <source src="images/video1.mp4" type="video/mp4">
                     </video>
@@ -271,7 +278,7 @@
                             Nihil ab fugiat unde rerum similique, earum exercitationem quos aperiam enim quibusdam,
                             perferendis tempore tenetur amet error eligendi neque alias, vel a ipsa dolores cupiditate!
                             Magnam blanditiis, minima commodi iusto quod maiores.</p><br>
-                        <a href="#">Discover<i class="ri-arrow-right-line"></i></a>
+                        <a href="#">See All<i class="ri-arrow-right-line"></i></a>
                     </div>
                     <div class="success-card">
                         <img src="images/image1.jpg" alt="">
@@ -301,7 +308,8 @@
             <div class="title1 big-title">TO HEAL</div>
             <div class="d-flex flex-row">
                 <div class="title2 big-title">OUR</div>
-                <p class="text-white" style="width: 35%; margin: auto;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptatem ex est, qui dolores, animi
+                <p class="text-white" style="width: 35%; margin: auto;">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Error voluptatem ex est, qui dolores, animi
                     officia accusantium explicabo reiciendis quos neque. Fugiat eos ipsum architecto non odio veniam,
                     velit neque mollitia dolorum adipisci suscipit quasi beatae rem eum enim vitae repudiandae deserunt
                     alias repellendus earum expedita? Commodi nostrum magni neque.</p>
@@ -316,6 +324,137 @@
                 </div>
                 <div class="career-image">
                     <h3>Driving positive social change starts with our people</h3>
+                </div>
+                <div class="career-content">
+                    <h3><b>Hasçelik</b> commits to creating a diverse environment and is an equal <b>opportunity
+                            employer.</b></h3>
+                    <a href="#" class="card-link">Work with us<i class="ri-arrow-right-line"></i></a>
+                    <img src="images/dalgaBg.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="communication">
+            <div class="container">
+                <div class="title">
+                    <h1 class="big-title">HOW CAN</h1>
+                    <h2 class="small-title">We help you?</h2>
+                </div>
+                <div class="d-flex">
+                    <div class="communication__content">
+                        <h6>GENEL MERKEZ</h6>
+                        <table>
+                            <tr>
+                                <td>Phone</td>
+                                <td class="opacity-75">+90 444 41 44</td>
+                            </tr>
+                            <tr>
+                                <td>Online Sales</td>
+                                <td class="opacity-75">+90 444 41 44</td>
+                            </tr>
+                            <tr>
+                                <td>E-mail</td>
+                                <td class="opacity-75">info@celik.com</td>
+                            </tr>
+                            <tr>
+                                <td>Center Office</td>
+                                <td class="opacity-75">İstanbul Avrupa Yakası Gül Cad. <br>N:1 Avcılar - İSTANBUL</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td><a href="#" class="card-link">Go to office<i class="ri-arrow-right-line"></i></a>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="communication__map">
+                        <ul class="nav nav-tabs justify-content-end">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" data-toggle="tab"
+                                    href="#tab1">Ofisler</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#tab2">Depolar</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#tab3">Üretim Tesisleri</a>
+                            </li>
+                        </ul>
+
+                        <div class="tab-content">
+                            <div id="tab1" class="tab-pane fade show active">
+                                <img src="images/harita1.jpeg" alt="">
+                                <a href="#"><i class="ri-map-pin-fill"></i></a>
+                            </div>
+                            <div id="tab2" class="tab-pane fade">
+                                <img src="images/harita.png" alt="">
+                            </div>
+                            <div id="tab3" class="tab-pane fade">
+                                <img src="images/harita1.jpeg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="container">
+                <div class="footer__column">
+                    <div class="header__top-logo mb-5">
+                        <img src="images/logo.png" alt="Logo" class="header__logo-img">
+                        <span class="header__logo-text">ESRA</span>
+                    </div>
+                    <h5>Müşteri Deneyim Merkezi</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatum voluptas illum repellat, nemo aspernatur.</p>
+                </div>
+                <div class="footer__column">
+                    <h6>Company</h6>
+                    <ul>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <h6>Products</h6>
+                    <ul>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <h6>Tecnical Info</h6>
+                    <ul>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <h6>Sustainability</h6>
+                    <ul>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <h6>Career</h6>
+                    <ul>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                    </ul>
                 </div>
             </div>
         </div>
