--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             </div>
         </div>
         <div class="footer">
-            <div class="container">
+            <div class="footer__top container">
                 <div class="footer__column">
                     <div class="header__top-logo mb-5">
                         <img src="images/logo.png" alt="Logo" class="header__logo-img">
@@ -457,6 +457,21 @@
                     </ul>
                 </div>
             </div>
+            <div class="container">
+                <hr class="border-3">
+                <div class="footer__bottom">
+                    <div class="social-icons">
+                        <i class="ri-facebook-fill"></i>
+                        <i class="ri-twitter-fill"></i>
+                        <i class="ri-instagram-fill"></i>
+                        <i class="ri-linkedin-fill"></i>
+                    </div>
+                    <div class="text">
+                        All Rights Reserved
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
     <script src="script.js"></script>
